--- a/index.html
+++ b/index.html
@@ -16,60 +16,30 @@
     </section>
 
     <section class="main-content">
-      <h2>
-<a id="第三方类库" class="anchor" href="#%E7%AC%AC%E4%B8%89%E6%96%B9%E7%B1%BB%E5%BA%93" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>第三方类库</h2>
+      <h3>
+<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+
+<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you’re using GitHub Desktop, simply sync your repository and you’ll see the new branch.</p>
 
 <h3>
-<a id="otto" class="anchor" href="#otto" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Otto</h3>
+<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Designer Templates</h3>
 
-<blockquote>
-<p>用于控件的解耦 不相互依赖</p>
-</blockquote>
+<p>We’ve crafted some handsome templates for you to use. Go ahead and click 'Continue to layouts' to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved.</p>
 
-<h4>
-<a id="基本用法" class="anchor" href="#%E5%9F%BA%E6%9C%AC%E7%94%A8%E6%B3%95" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>基本用法</h4>
+<h3>
+<a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Creating pages manually</h3>
 
-<p>引入</p>
+<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
 
-<pre lang="android"><code>dependencies {
-  compile 'com.squareup:otto:1.3.8'
-}
-</code></pre>
+<h3>
+<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Authors and Contributors</h3>
 
-<p>定义事件</p>
+<p>You can <a href="https://help.github.com/articles/basic-writing-and-formatting-syntax/#mentioning-users-and-teams" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor’s GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
 
-<div class="highlight highlight-source-java"><pre><span class="pl-k">public</span> <span class="pl-k">class</span> <span class="pl-en">MessageEvent</span>{
-  <span class="pl-c">/* Additional fields if needed */</span>
-}</pre></div>
+<h3>
+<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Support or Contact</h3>
 
-<p>订阅和取消</p>
-
-<div class="highlight highlight-source-java"><pre>bus<span class="pl-k">.</span>register(<span class="pl-smi">Context</span>);<span class="pl-c">//订阅</span>
-bus<span class="pl-k">.</span>unregister(<span class="pl-smi">Context</span>);<span class="pl-c">//取消订阅</span></pre></div>
-
-<p>发布</p>
-
-<div class="highlight highlight-source-java"><pre>bus<span class="pl-k">.</span>post(<span class="pl-k">new</span> MwssageEvent);
-<span class="pl-c">//可以是@Produce注解的方法</span></pre></div>
-
-<p>注解</p>
-
-<p><strong><a href="https://github.com/Subscribe" class="user-mention">@Subscribe</a></strong>:这个在调用了register后有效,表示订阅了一个事件,并且方法的用 public 修饰的.方法名可以随意取,重点是参数,它是根据你的参数进行判断是那个事件</p>
-
-<p><strong><a href="https://github.com/Produce" class="user-mention">@Produce</a></strong>注解告诉Bus该函数是一个事件产生者，产生的事件类型为该函数的返回值。post中传递的方法，返回值为定义的事件类</p>
-
-<h4>
-<a id="proguard-需要做一些额外处理防止混淆" class="anchor" href="#proguard-%E9%9C%80%E8%A6%81%E5%81%9A%E4%B8%80%E4%BA%9B%E9%A2%9D%E5%A4%96%E5%A4%84%E7%90%86%E9%98%B2%E6%AD%A2%E6%B7%B7%E6%B7%86" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>proguard 需要做一些额外处理，防止混淆</h4>
-
-<div class="highlight highlight-source-java"><pre><span class="pl-k">-</span>keepattributes <span class="pl-k">*</span><span class="pl-smi">Annotation</span><span class="pl-k">*</span>
-<span class="pl-k">-</span>keepclassmembers class <span class="pl-k">**</span> {
-    @<span class="pl-smi">com.squareup.otto<span class="pl-k">.</span>Subscribe</span> <span class="pl-k">public</span> <span class="pl-k">*</span>;
-    @<span class="pl-smi">com.squareup.otto<span class="pl-k">.</span>Produce</span> <span class="pl-k">public</span> <span class="pl-k">*</span>;
-}</pre></div>
-
-<blockquote>
-<p><strong>otto</strong>应用在主线程中，内部没有异步线程的场景。（解决UI的通信机制 轻量级）</p>
-</blockquote>
+<p>Having trouble with Pages? Check out our <a href="https://help.github.com/pages">documentation</a> or <a href="https://github.com/contact">contact support</a> and we’ll help you sort it out.</p>
 
       <footer class="site-footer">
 
